2004-10-02  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/gdiplus/tests/.cvsignore: Ignore _hooks.c and _stubs.S.
	* lib/gdiplus/tests/Makefile (TARGET_OBJECTS): Remove passthrough.o and
	add _hooks.o and _stubs.o.
	* lib/gdiplus/tests/tests/test-1.c: Test API hooking.
	* regtests/shared/regtests.h: Add support for API hooking.
	* tools/helper.mk: Generate stubs.
	* tools/regtests.c: Add support for generating stubs and hooks.
	* lib/gdiplus/tests/passthrough.c: Remove.
	* lib/gdiplus/tests/stubs.tst: New file.

2004-09-23  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/msafd/makefile (TARGET_CFLAGS): Don't define DBG.
	* lib/msafd/include/debug.h: Redefine ASSERT.

2004-08-25  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* tools/cdmake/cdmake.c: Error out if extension is too long.

2004-08-20  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* Makefile: Fix ntoskrnl dependency problem.

2004-08-19  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* regtests/shared/regtests.c: Mark test name with |.

2004-08-19  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* Makefile: Depend on roscfg.h.

2004-08-19  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* tools/regtests2xml: New directory.
	* tools/regtests2xml/.cvsignore: New file.
	* tools/regtests2xml/Makefile: Ditto.
	* tools/regtests2xml/regtests2xml.c: Ditto.

2004-08-17  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* tools/depend.mk: Don't generate dependencies for implib target.

2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* Makefile: Correct dependencies.
	* tools/Makefile: Silence some annoying messages.
	* tools/config.mk: Ditto.
	* rules.mak (MINIMALDEPENDENCIES): New option; minimal dependencies
	(yes/no). If yes, then components do not depend on all import libraries.
	If no, then they do. Defaults to yes.

2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>
